add: auth open api
