# api-server/openapi/openapi-spec.yaml
@@ -17,6 +17,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FindTodoResponseDto'
+        '401':
+          description: 認証エラー
       tags: &ref_0
         - todo
       security: &ref_1
@@ -31,6 +33,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FindTodoListResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_0
       security: *ref_1
   /api/todo/{id}:
@@ -49,6 +53,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FindTodoResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_0
       security: *ref_1
     patch:
@@ -72,6 +78,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FindTodoResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_0
       security: *ref_1
     delete:
@@ -89,6 +97,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/FindTodoResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_0
       security: *ref_1
   /api/auth/sign_in:
@@ -103,7 +113,13 @@ paths:
               $ref: '#/components/schemas/SignInUserDto'
       responses:
         '200':
-          description: ''
+          description: ログイン完了
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponseDto'
+        '401':
+          description: 認証エラー
       tags: &ref_2
         - auth
   /api/auth/sign_up:
@@ -118,7 +134,13 @@ paths:
               $ref: '#/components/schemas/SignUpUserDto'
       responses:
         '201':
-          description: ''
+          description: 会員登録完了
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_2
   /api/auth/authentication:
     post:
@@ -126,8 +148,16 @@ paths:
       parameters: []
       responses:
         '200':
-          description: ''
+          description: 認証チェックOK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AuthResponseDto'
+        '401':
+          description: 認証エラー
       tags: *ref_2
+      security:
+        - bearer: []
 info:
   title: API description
   description: ''
@@ -249,6 +279,53 @@ components:
     SignInUserDto:
       type: object
       properties: {}
+    UserEntity:
+      type: object
+      properties:
+        id:
+          type: number
+          example: 1
+        name:
+          type: string
+          example: ユーザー1
+          minLength: 2
+          maxLength: 25
+        email:
+          type: string
+          example: user1@test.com
+          maxLength: 255
+        createdAt:
+          format: date-time
+          type: string
+          example: '2022-10-28T08:38:14.237Z'
+        updatedAt:
+          format: date-time
+          type: string
+          example: '2022-10-28T08:38:14.237Z'
+      required:
+        - id
+        - name
+        - email
+        - createdAt
+        - updatedAt
+    AuthResponseDto:
+      type: object
+      properties:
+        user:
+          example:
+            id: 1
+            name: ユーザー1
+            email: user1@test.com
+            createdAt: '2022-10-28T08:38:14.237Z'
+            updatedAt: '2022-10-28T08:38:14.237Z'
+          allOf:
+            - $ref: '#/components/schemas/UserEntity'
+        accessToken:
+          type: string
+          example: token
+      required:
+        - user
+        - accessToken
     SignUpUserDto:
       type: object
       properties: {}
