# api-server/src/auth/auth.controller.ts
@@ -9,6 +9,7 @@ import {
 } from '@nestjs/common';
 import {
   ApiTags,
+  ApiBearerAuth,
   ApiBadRequestResponse,
   ApiOkResponse,
   ApiUnauthorizedResponse,
@@ -20,6 +21,7 @@ import { AuthGuard } from '@nestjs/passport';
 import { AuthService } from './auth.service';
 import { SignInUserDto } from './dto/sign-in-user.dto';
 import { SignUpUserDto } from './dto/sign-up-user.dto';
+import { AuthResponseDto } from './dto/auth-user.dto';
 import { JwtPayload } from '../lib/jwt/interfaces/jwt-payload.interface';
 
 @ApiTags('auth')
@@ -29,19 +31,41 @@ export class AuthController {
 
   @Post('sign_in')
   @HttpCode(200)
+  @ApiOkResponse({
+    type: AuthResponseDto,
+    description: 'ログイン完了',
+  })
+  @ApiUnauthorizedResponse({
+    description: '認証エラー',
+  })
   async signIn(@Body(ValidationPipe) signInUserDto: SignInUserDto) {
     return await this.authService.signIn(signInUserDto);
   }
 
   @Post('sign_up')
   @HttpCode(201)
+  @ApiCreatedResponse({
+    type: AuthResponseDto,
+    description: '会員登録完了',
+  })
+  @ApiUnauthorizedResponse({
+    description: '認証エラー',
+  })
   async signUp(@Body(ValidationPipe) signUpUserDto: SignUpUserDto) {
     return await this.authService.signUp(signUpUserDto);
   }
 
+  @ApiBearerAuth()
   @UseGuards(AuthGuard('jwt'))
   @Post('authentication')
   @HttpCode(200)
+  @ApiOkResponse({
+    type: AuthResponseDto,
+    description: '認証チェックOK',
+  })
+  @ApiUnauthorizedResponse({
+    description: '認証エラー',
+  })
   async authentication(@Request() req: { user: JwtPayload }) {
     return await this.authService.authCheck(req.user.userId);
   }
